CRUDtoTagsAndCategories
