# main.go
@@ -43,7 +43,13 @@ func main() {
 	router.GET("/memes", func(c *gin.Context) { DB.GetMeme(c, db) })
 	router.GET("/memes/:id", func(c *gin.Context) { DB.GetMemeByID(c, db) })
 	router.POST("/memes", func(c *gin.Context) { DB.CreateMeme(c, db) })
-	router.PUT("/memes/:id", func(c *gin.Context) { DB.UpdateMeme(c, db) })
+	router.PATCH("/memes/:id", func(c *gin.Context) { DB.UpdateMeme(c, db) })
 	router.DELETE("/memes/:id", func(c *gin.Context) { DB.DeleteMeme(c, db) })
+	router.POST("/tags", func(c *gin.Context) { DB.CreateTag(c, db) })
+	router.PATCH("/tags/:id", func(c *gin.Context) { DB.UpdateTag(c, db) })
+	router.DELETE("/tags/:id", func(c *gin.Context) { DB.DeleteTag(c, db) })
+	router.POST("/categories", func(c *gin.Context) { DB.CreateCategory(c, db) })
+	router.PATCH("/categories/:id", func(c *gin.Context) { DB.UpdateCategory(c, db) })
+	router.DELETE("/categories/:id", func(c *gin.Context) { DB.DeleteCategory(c, db) })
 	router.Run(":8080")
 }
